updater: Use default Google auth (`gcloud auth login`) and use new datastore.Client. Add progress bar for the large downloads.

--- a/updater/README
+++ b/updater/README
@@ -1,9 +1,3 @@
 This utility updates the Play services and Support libraries versions on the production website.
 
-$ go run update_versions.go get_versions.go
-
-`CLOUD_PRIVATE_KEY` needs to be set. For example:
-$ export CLOUD_PRIVATE_KEY=~/Downloads/gradleplease-*.json
-
-This file can be obtained/generated from here:
-https://console.developers.google.com/project/gradleplease/apiui/credential
+$ gcloud auth login && go run *.go
